# Icarus

./: .gitignore  COMPLETION_MESSAGE.txt  Cargo.toml  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SEGFAULT_FIX_PROGRESS.md  SEGFAULT_FIX_SUCCESS.md  START_HERE.txt  WORK_COMPLETED.md  comprehensive_function_tests.sh  debug_if.fr  debug_partial.fr  debug_test.fr  index.html  install_release.sh  main  main.fr  organize_docs.sh  progressive_test.fr  repro_core_wasm.mjs  single_if.fr  test10.fr  test11.fr  test12.fr  test14.fr  test15.fr  test2.fr  test3.fr  test4.fr  test5.fr  test9.fr  test_all  test_all_features.sh  test_arithmetic  test_arithmetic.fr  test_ask_simple  (+53 more)
Start Scripts/: setup_wasm.sh  verify_session_complete.sh  verify_setup.sh
deploy/: index.html
docs/: ACTUAL_STATUS.md  AI_GUIDE.md  BUILD_FIX_SUMMARY.txt  BUILD_SUCCESS.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  CRITICAL_SAFETY_VERIFIED.md  DELIVERABLES.md  DOCS_ORGANIZED.txt  ENHANCEMENT_SUMMARY.md  FEATURES.md  FEATURE_IMPLEMENTATION_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SESSION_REPORT.md  FINAL_STATUS.md  FULL_20_HOUR_STATUS.md  FUNCTION_FIX_DOCUMENTATION.md  FUNCTION_RETURN_FIX_COMPLETE.md  GUIDE.md  HONEST_REPORT.md  INDEX.md  INSTALL.md  INSTALLATION_COMPLETE.md  INSTALL_USAGE.md  JIT_ALL_10_PHASES_COMPLETE.md  JIT_COMPLETE_STATUS.md  JIT_FEATURE_TEST_COMPREHENSIVE.txt  JIT_FINAL_STATUS.md  JIT_FUNCTION_CALL_DEBUG.txt  JIT_FUNCTION_COMPILATION_FIX.txt  JIT_IMPLEMENTATION_COMPLETE.sh  JIT_IMPLEMENTATION_PLAN.md  (+39 more)
(+174 files in other folders)
