[package]
name = "forge"
version = "1.0.0"
edition = "2021"

[dependencies]
logos = "0.13"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
colored = "2.1"
libc = "0.2"

[lib]
name = "forge"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[[bin]]
name = "metroman"
path = "src/metroman.rs"

[[bin]]
name = "test_parser"
path = "test_parser.rs"

[[bin]]
name = "core"
path = "src/bin/core.rs"

[[bin]]
name = "fforge"
path = "src/bin/fforge.rs"

[[bin]]
name = "forger"
path = "src/bin/forger.rs"
